# CodeClips

./: .gitignore  README.md
C++/: Learn_C++.cpp  README.md
C++/cmake/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  License.txt  Makefile  TutorialConfig.h  TutorialConfig.h.in  cmake_install.cmake  tutorial.cpp
C++/cmake/MathFunctions/: CMakeLists.txt  Makefile  cmake_install.cmake  mysqrt.cpp
C++/cmake/Testing/Temporary/: CTestCostData.txt
C++/example_dll/: example_exe.cpp
python/: Learn FP.py  Learn_python.py  README.md  basicUse.py
